# smol

./: Cargo.toml  README.md
doc/: ir.md  semantics.md  syntax.md
src/: back.rs  common.rs  front.rs  lib.rs  middle.rs
src/back/: asm.rs  codegen.rs  tests.rs
src/front/: ast.rs  lex.rs  lower.rs  parse.rs
src/middle/: opt.rs  tir.rs
